# zengrowth

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
branding/: README.md  generate_assets.py
docs/: ACADEMIC-PUBLICATION-PLAN.md  ARCHITECTURE.md  ATS_INGESTION.md  AUDIT_LOGGING.md  DASHBOARD.md  LOCAL_SETUP.md  MATERIAL_GENERATION.md  PRIVACY_AND_DATA.md  PUBLIC_REPO_SCOPE.md  ROADMAP.md  SCORING_AND_EXPECTED_VALUE.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/public/: manifest.webmanifest
templates/: cv.tex
tests/: conftest.py  test_api_interviews.py  test_api_jobs.py  test_api_materials.py  test_api_offers.py  test_api_outcomes.py  test_api_settings.py  test_app_factory.py  test_ats_parsers.py  test_auth.py  test_branding.py  test_budget.py  test_config.py  test_cv_alignment.py  test_cv_diff.py  test_dedup.py  test_discovery.py  test_entity_resolution.py  test_events.py  test_evidence_parsing.py  test_ingestion_health.py  test_ingestion_precheck.py  test_intact_material_quality.py  test_interview_debrief.py  test_interview_learning.py  test_interview_packs.py  test_interview_sim_prompt.py  test_job_description_extractor.py  test_job_summarizer.py  test_jobs_curation.py  test_kanon.py  test_knowledge.py  test_knowledge_dedup.py  test_knowledge_facets.py  test_llm_errors.py  test_llm_json.py  test_markdown_format.py  test_material_match_report.py  test_materials_generator.py  test_materials_names.py  (+5 more)
(+206 files in other folders)
