[project]
name = "zengrowth"
version = "0.1.0"
description = "ZenGrowth — a personal career operating system (Phase 1: ingestion, scoring, dashboard)"
authors = [{ name = "Zenouz AI" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115,<0.116)",
    "uvicorn[standard] (>=0.30,<0.31)",
    "sqlmodel (>=0.0.22,<0.1)",
    "pydantic (>=2.7,<3)",
    "pydantic-settings (>=2.4,<3)",
    "httpx (>=0.27,<0.28)",
    "anthropic (>=0.39,<1)",
    "tavily-python (>=0.5,<1)",
    "apscheduler (>=3.10,<4)",
    "python-dateutil (>=2.9,<3)",
    "openai (>=2.43.0,<3.0.0)",
    "pypdf (>=6.13.3,<7.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "rapidfuzz (>=3.9,<4)",
]

[tool.poetry]
package-mode = true
packages = [{ include = "zengrowth", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
ruff = "^0.6"
respx = "^0.21"
jupyterlab = "^4.5.7"
ipykernel = "^7.2.0"
pillow = "^12.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # FastAPI's `Depends(...)` in argument defaults is the standard idiom
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
